--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,24 @@
+@font-face {
+    font-family: 'Julius Sans One';
+    src: url(../fonts/JuliusSansOne-Regular.ttf);
+}
+
+@font-face {
+    font-family: 'Archivo Narrow';
+    src: url(../fonts/ArchivoNarrow-BoldItalic.ttf),
+        url(../fonts/ArchivoNarrow-Bold.ttf),
+        url(../fonts/ArchivoNarrow-Italic.ttf),
+        url(../fonts/ArchivoNarrow-Regular.ttf);
+}
+
+.jumbotron h1 {
+  font-family: Julius Sans One;
+}
+
+.jumbotron p, .jumbotron h3, h1 {
+  font-family: Archivo Narrow;
+}
+
 .summary {
   color: #333333;
   font-family: Gill Sans / Gill Sans MT, sans-serif;
